--- a/truck-landing/index.html
+++ b/truck-landing/index.html
@@ -273,15 +273,15 @@
                 </div>
             </div>
             <div class="contact-form-block" id="calculate">
-                <form class="contact-form">
+                <form class="contact-form" id="contactForm">
                     <h3>Рассчитать стоимость</h3>
                     <div class="form-group">
                         <label>Марка грузовика</label>
-                        <input type="text" placeholder="Например: Scania R450" required>
+                        <input type="text" name="truck" placeholder="Например: Scania R450" required>
                     </div>
                     <div class="form-group">
                         <label>Что беспокоит?</label>
-                        <select>
+                        <select name="issue">
                             <option>Плохой ближний свет</option>
                             <option>Запотевание фары</option>
                             <option>Разбито стекло</option>
@@ -291,8 +291,9 @@
                     </div>
                     <div class="form-group">
                         <label>Ваш телефон</label>
-                        <input type="tel" placeholder="+7 (999) 000-00-00" required>
+                        <input type="tel" name="phone" placeholder="+7 (999) 000-00-00" required>
                     </div>
+                    <div id="formStatus" class="form-status"></div>
                     <button type="submit" class="btn btn-primary btn-full">Получить расчет</button>
                     <p class="form-policy">Нажимая кнопку, вы соглашаетесь с политикой обработки данных.</p>
                 </form>
